Bug 405763 - Segfault on 19.03.80
Summary: Segfault on 19.03.80
Status: RESOLVED FIXED
Alias: None
Product: knights
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Semke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-03-22 20:01 UTC by Gwyn Ciesla
Modified: 2019-03-23 16:59 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 19.04
Sentry Crash Report:


Attachments
Backtrace (11.19 KB, text/plain)
2019-03-22 20:01 UTC, Gwyn Ciesla
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gwyn Ciesla 2019-03-22 20:01:17 UTC
SUMMARY


STEPS TO REPRODUCE
1. 
2. 
3. 

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Gwyn Ciesla 2019-03-22 20:01:46 UTC
Created attachment 118978 [details]
Backtrace
Comment 2 Gwyn Ciesla 2019-03-22 20:02:27 UTC
Open.
New.
Choose Randomly (Black or White)
Ok.
segfault.

On Fedora 29.
Comment 3 Alexander Semke 2019-03-22 22:16:14 UTC
Git commit d3e41cd8c5cf1274083497c249a4b72b3148abd8 by Alexander Semke.
Committed on 22/03/2019 at 22:15.
Pushed by asemke into branch 'Applications/19.04'.

Don't crash when new game is created. Regression introduced in 8867833e00bdca2373a0b6ad9a4431d184501691.
FIXED-IN: 19.04

M  +2    -1    src/board.cpp

https://commits.kde.org/knights/d3e41cd8c5cf1274083497c249a4b72b3148abd8