Don't crash when new game is created. Regression introduced in 8867833e00bdca2373a0b6ad9a4431d184501691.

BUG: 405763
FIXED-IN: 19.04